--- a/index.html
+++ b/index.html
@@ -50,10 +50,24 @@
            p:hover {
              outline: 2px double red;
            }
+
+           #myDiv {
+             background-color: white;
+             color: black;
+             width: 50vw;
+             height: 20vh;
+             margin: 0 auto;
+             display: flex;
+             justify-content: center;
+             align-items: center;
+             font-size: 1.5em;
+           }
     </style>
   </head>
   <body>
     <section id="section1">
+              
+              <h2>Come to Labs</h2>
               <p>
                     Why won't students come to labs? This is something I always ponder. 
                     After unprepared students write exams, They watch their marks in wonder. 
@@ -72,7 +86,8 @@
                 </p>
     </section>
     <section id="section2">
-         <h1>Section 2</h1>
+         <!-- Replace the h1 with a div -->
+         <div id="myDiv">My Div</div>
     </section>
     <script src="script.js"></script>
   </body>
